--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /dcm_microsite/
+RewriteBase /dcm_shriram_sugar/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /dcm_microsite/index.php [L]
+RewriteRule . /dcm_shriram_sugar/index.php [L]
 </IfModule>
 
 # END WordPress
